--- a/index.html
+++ b/index.html
@@ -1,131 +1,100 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Crypto Signal Dashboard - KI-gestützt</title>
-<link rel="stylesheet" href="assets/css/variables.css">
-<link rel="stylesheet" href="assets/css/components.css">
-<link rel="stylesheet" href="assets/css/animations.css">
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Share+Tech+Mono&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Crypto Signal Dashboard</title>
+
+  <!-- FONTS AUS indexOLD -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Share+Tech+Mono&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- DEINE CSS DATEIEN -->
+  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="assets/css/animations.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
 
-<!-- Login Screen -->
-<div id="loginScreen">
-  <div class="login-box">
-    <div class="login-logo">
-      <div class="login-logo-icon">◈</div>
-      <div class="login-title">CRYPTO SIGNAL</div>
-      <div class="login-sub">DAYTRADER DASHBOARD · SECURE ACCESS</div>
-    </div>
-    <div class="login-divider"></div>
-    
-    <div class="login-field">
-      <label class="login-label" for="loginUser">▸ Benutzername</label>
-      <div class="login-input-wrap">
-        <span class="login-input-icon">👤</span>
-        <input class="login-input" type="text" id="loginUser" placeholder="Username" autocomplete="username" />
+<div class="container">
+
+  <!-- ===== HEADER ===== -->
+  <header>
+    <div class="logo">
+      <div class="logo-icon">◈</div>
+      <div>
+        <h1>CRYPTO SIGNAL</h1>
+        <p>DAYTRADER DASHBOARD</p>
       </div>
     </div>
 
-    <div class="login-field">
-      <label class="login-label" for="loginPass">▸ Passwort</label>
-      <div class="login-input-wrap">
-        <span class="login-input-icon">🔒</span>
-        <input class="login-input" type="password" id="loginPass" placeholder="Passwort" autocomplete="current-password" />
+    <div class="header-right">
+      <div class="live-badge">
+        <span class="live-dot"></span>
+        LIVE
       </div>
+      <div class="timestamp" id="timestamp">--:--:--</div>
     </div>
+  </header>
 
-    <button class="login-btn" id="loginBtn">⚡ EINLOGGEN</button>
-    <div class="login-error" id="loginError">✕ UNGÜLTIGE ZUGANGSDATEN</div>
-    
-    <div class="login-footer">
-      CRYPTO SIGNAL DASHBOARD · ZUGANG NUR FÜR AUTORISIERTE NUTZER
-    </div>
+  <!-- ===== GRID ===== -->
+  <div id="coinGrid" class="grid"></div>
+
+  <div class="footer">
+    Binance Live Data • Auto Refresh 15s
   </div>
+
 </div>
 
-<!-- Dashboard (hidden until login) -->
-<div id="dashboardWrapper" style="display:none;">
-  <div class="loading-overlay" id="loadingOverlay">
-    <div class="loading-spinner"></div>
-    <div class="loading-text">ANALYSE LÄUFT</div>
-    <div class="loading-sub" id="loadingSub">KI analysiert Marktdaten...</div>
-  </div>
 
-  <div class="container">
-    <header>
-      <div class="logo">
-        <div class="logo-icon" id="logoIcon">◈</div>
-        <div>
-          <h1 id="dashTitle">CRYPTO SIGNAL</h1>
-          <p>KI-Powered Daytrader Dashboard</p>
-        </div>
-      </div>
-      <div class="header-right">
-        <div class="user-badge" id="userBadge"><span class="user-dot"></span>ADMIN</div>
-        <div class="live-badge"><div class="live-dot"></div>KI ANALYSE</div>
-        <div class="timestamp" id="timestamp"></div>
-        <button class="logout-btn" id="logoutBtn">⏻ LOGOUT</button>
-      </div>
-    </header>
-  </div>
+<!-- ===== SCRIPT ===== -->
+<script type="module">
+import { fetchBinancePrices } from "./src/api/binance.js";
 
-  <!-- Selector Bar -->
-  <div class="selector-bar">
-    <span class="selector-label">COIN AUSWÄHLEN:</span>
-    <div class="coin-select-wrap">
-      <select class="coin-select" id="coinSelect">
-        <option value="BTC">₿ BTC – Bitcoin</option>
-        <option value="ETH">Ξ ETH – Ethereum</option>
-        <option value="XRP" selected>✕ XRP – Ripple</option>
-        <option value="SOL">◎ SOL – Solana</option>
-      </select>
-      <span class="select-arrow">▼</span>
+const grid = document.getElementById("coinGrid");
+const timeEl = document.getElementById("timestamp");
+
+function updateTime() {
+  const now = new Date();
+  timeEl.textContent = now.toLocaleTimeString();
+}
+setInterval(updateTime, 1000);
+updateTime();
+
+function createCard(coin) {
+  const changeClass = coin.change >= 0 ? "up" : "down";
+
+  const el = document.createElement("div");
+  el.className = "card";
+  el.innerHTML = `
+    <div class="symbol">${coin.symbol}</div>
+    <div class="price">$ ${Number(coin.price).toLocaleString()}</div>
+    <div class="${changeClass}">
+      ${coin.change >= 0 ? "+" : ""}${coin.change}%
     </div>
-    <button class="analyze-btn" id="analyzeBtn">⚡ ANALYSE STARTEN</button>
-    <div class="coin-chips">
-      <div class="chip" data-coin="XRP">XRP</div>
-      <div class="chip" data-coin="BTC">BTC</div>
-      <div class="chip" data-coin="ETH">ETH</div>
-      <div class="chip" data-coin="SOL">SOL</div>
-    </div>
-  </div>
+  `;
+  return el;
+}
 
-  <div class="container" id="dashboardContent">
-    <div class="price-hero" id="priceHero">
-      <div class="current-price">
-        <div class="price-label">AKTUELLER KURS</div>
-        <div class="price-value" id="priceValue">–</div>
-        <div class="price-change up" id="priceChange">Wird geladen...</div>
-      </div>
-      <div class="stats-grid">
-        <div class="stat-box"><div class="stat-label">24H HOCH</div><div class="stat-val" id="stat24hH">–</div></div>
-        <div class="stat-box"><div class="stat-label">24H TIEF</div><div class="stat-val" id="stat24hL">–</div></div>
-        <div class="stat-box"><div class="stat-label">7D PERF.</div><div class="stat-val" id="stat7d">–</div></div>
-        <div class="stat-box"><div class="stat-label">30D PERF.</div><div class="stat-val" id="stat30d">–</div></div>
-      </div>
-      <div class="signal-box neutral" id="signalBox">
-        <div class="signal-label">DAYTRADER SIGNAL</div>
-        <div class="signal-value" id="signalValue">HALTEN</div>
-        <div class="signal-sub" id="signalSub">Vorsichtiges Abwarten</div>
-        <div class="signal-confidence" id="signalConf">⚡ Konfidenz: 65%</div>
-      </div>
-      <div class="price-hero-bg" id="heroBg">XRP</div>
-    </div>
+async function loadData() {
+  try {
+    const data = await fetchBinancePrices();
 
-    <div id="mainContent">
-      <!-- Hier wird der Chart und weitere Komponenten eingefügt -->
-      <p style="text-align:center;padding:40px;color:var(--text-dim);">
-        Dashboard wird geladen... Bitte warten.
-      </p>
-    </div>
-  </div>
-</div>
+    grid.innerHTML = "";
 
-<!-- Main Module -->
-<script type="module" src="src/main.js"></script>
+    data.slice(0, 12).forEach(coin => {
+      grid.appendChild(createCard(coin));
+    });
+
+  } catch (e) {
+    console.error("Fehler beim Laden:", e);
+  }
+}
+
+loadData();
+setInterval(loadData, 15000);
+</script>
 
 </body>
 </html>
